--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A vue scrollbar component for PC, surpport SSR.",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "./node_modules/.bin/webpack  --progress --mode production",
+    "build": "./node_modules/.bin/webpack --progress --mode production",
     "eslint": "./node_modules/.bin/eslint ./src/index.vue",
     "test": "cross-env BABEL_ENV=test karma start --single-run"
   },
@@ -35,7 +35,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.13.0",
@@ -52,7 +54,7 @@
     "vue": "^2.5.16",
     "vue-loader": "^15.2.6",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.16.1",
+    "webpack": "^4.12.0",
     "webpack-command": "^0.2.1"
   }
 }
