--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-scrollbar-live",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A vue scrollbar component for PC, surpport SSR.",
   "main": "./lib/index.js",
   "scripts": {
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/livelybone/vue-scrollbar-live#readme",
   "devDependencies": {
+    "@livelybone/mouse-wheel": "^1.2.0",
     "@vue/test-utils": "^1.0.0-beta.21",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -57,7 +58,5 @@
     "webpack": "^4.12.0",
     "webpack-command": "^0.2.1"
   },
-  "dependencies": {
-    "@livelybone/mouse-wheel": "^1.1.0"
-  }
+  "dependencies": {}
 }
