--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/livelybone/vue-scrollbar-live#readme",
   "devDependencies": {
-    "@livelybone/mouse-wheel": "^1.2.0",
     "@vue/test-utils": "^1.0.0-beta.21",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -58,5 +57,7 @@
     "webpack": "^4.12.0",
     "webpack-command": "^0.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@livelybone/mouse-wheel": "^1.4.0"
+  }
 }
