--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "vue-scrollbar-live",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "A vue scrollbar component, support SSR.",
-  "main": "./lib/index.js",
+  "main": "./lib/umd/index.js",
+  "module": "./lib/es/index.js",
+  "unpkg": "./lib/umd/index.js",
+  "css_path": "./lib/css/index.css",
   "scripts": {
-    "build": "./node_modules/.bin/webpack --progress --mode production",
-    "eslint": "./node_modules/.bin/eslint ./src/index.vue",
+    "build:css": "node-sass ./src/css/index.css ./lib/css/index.css --output-style compressed",
+    "build": "rimraf ./lib && npm run build:css && rollup -c",
+    "eslint": "eslint ./src/index.vue",
     "test": "cross-env BABEL_ENV=test karma start --single-run"
   },
   "repository": {
@@ -17,7 +21,7 @@
     "scrollbar",
     "PC",
     "mobile",
-    "small size (3kb)",
+    "small size (2kb)",
     "SSR"
   ],
   "author": "livelybone",
@@ -31,6 +35,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "^4.1.6",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -52,6 +57,12 @@
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.0",
     "mocha": "^5.2.0",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-uglify": "^5.0.2",
+    "rollup-plugin-vue": "^4.3.2",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.6",
     "vue-template-compiler": "^2.5.16",
@@ -59,7 +70,7 @@
     "webpack-command": "^0.2.1"
   },
   "dependencies": {
-    "@livelybone/mouse-wheel": "^2.0.1",
-    "@livelybone/touch": "^1.4.0"
+    "@livelybone/mouse-wheel": "^3.0.0",
+    "@livelybone/touch": "^2.1.0"
   }
 }
