--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-scrollbar-live",
-  "version": "4.6.1",
+  "version": "4.7.0",
   "description": "A vue scrollbar component, support SSR.",
   "main": "./lib/umd/index.js",
   "module": "./lib/es/index.js",
@@ -10,7 +10,9 @@
     "build:css": "node-sass ./src/css/index.css ./lib/css/index.css --output-style compressed",
     "build": "rimraf ./lib && npm run build:css && rollup -c",
     "eslint": "eslint ./src/index.vue",
-    "test": "cross-env BABEL_ENV=test karma start --single-run"
+    "test": "cross-env BABEL_ENV=test karma start --single-run",
+    "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "commit": "npx git-cz"
   },
   "repository": {
     "type": "git",
@@ -41,8 +43,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
+    "commitizen": "^3.0.7",
+    "conventional-changelog-cli": "^2.0.12",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "^2.1.0",
     "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -57,13 +62,13 @@
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.0",
     "mocha": "^5.2.0",
-    "rollup": "^0.65.0",
+    "rollup": "^1.15.6",
     "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-license": "^0.7.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-uglify": "^5.0.2",
-    "rollup-plugin-vue": "^4.3.2",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-license": "^0.9.0",
+    "rollup-plugin-node-resolve": "^5.0.3",
+    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-plugin-vue": "^5.0.0",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.6",
     "vue-template-compiler": "^2.5.16",
@@ -72,6 +77,11 @@
   },
   "dependencies": {
     "@livelybone/mouse-wheel": "^3.1.0",
-    "@livelybone/touch": "^2.3.0"
+    "@livelybone/touch": "^3.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
