--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-scrollbar-live",
-  "version": "5.1.1",
+  "version": "5.1.2",
   "description": "A vue scrollbar component, support SSR.",
   "main": "./lib/umd/index.js",
   "module": "./lib/es/index.js",
@@ -25,8 +25,9 @@
     "vue",
     "scrollbar",
     "PC",
+    "IE/Edge",
     "mobile",
-    "small size(2kb)",
+    "small size",
     "SSR"
   ],
   "author": "2631541504@qq.com",
