--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-scrollbar-live",
-  "version": "5.1.4",
+  "version": "5.2.0",
   "description": "A vue scrollbar component, support SSR.",
   "main": "./lib/umd/index.js",
   "module": "./lib/es/index.js",
@@ -106,7 +106,7 @@
     ]
   },
   "dependencies": {
-    "@livelybone/mouse-events": "^0.1.0",
+    "@livelybone/mouse-events": "^1.0.0-beta",
     "@livelybone/scroll-get": "^3.4.2"
   }
 }
